--- a/popup.css
+++ b/popup.css
@@ -11,6 +11,8 @@ body {
   /*overflow: hidden;*/
   width: 300px;
   height: 350px;
+  background-color: #ffe9a8;
+
 }
 #eyeGalaw-icon{
 	width: 50px;
