--- a/controls.css
+++ b/controls.css
@@ -60,3 +60,29 @@
     height: 50px;
     width: 100px;
 }
+
+
+
+
+
+/*EYEGALAW UI*/
+body{
+    height: 100%;
+    width: 100%;
+}
+#main_frame{
+    top: 0%;
+    left: 0%;
+     height: 100%;
+    width: 100%;
+    position:fixed;
+    background-color:pink;   
+}
+#myDivId{
+    position:fixed;
+    top:50%;
+left:50%;
+width:100%;   
+height:100%;
+background-color:red;
+}
