--- a/popup.css
+++ b/popup.css
@@ -29,12 +29,6 @@ body {
   outline: none;
   text-decoration: none;
 }
-.dropdown{
-  background-color: #effff3;
-  width: 150px;
-  height: 200px;
-
-}
 
 
 
@@ -108,3 +102,26 @@ body {
 
 
 
+/*options*/
+
+.ghost-button .options {
+    position: relative;
+    top: 0;
+    /*background-color: lightblue;*/
+    z-index: 10;
+    cursor:pointer;
+}
+
+
+.dropdown{
+  position: relative;
+    top: -200px;
+    background-color: yellow;
+    z-index: 1;
+    -webkit-transition: top 1s;
+    -moz-transition: top 1s;
+    -o-transition: top 1s;
+    transition: top 1s;
+  width: 150px;
+  height: 200px;
+}
