--- a/popup.css
+++ b/popup.css
@@ -4,20 +4,25 @@
 body {
   font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
   font-size: 100%;
+  width: 100%;
+  height: 100%;
 }
 #main {
-  /* avoid an excessively wide status text */
-  /*white-space: pre;*/
-  /*overflow: hidden;*/
-  width: 300px;
+  width: 250px;
   height: 350px;
   background-color: #ffe9a8;
 
 }
-#eyeGalaw-icon{
-	width: 50px;
+img#eyeGalaw-icon{
+  /*right: 0;*/
+	 width: 50px;
   	height: 50px;
+     display: block;
+  margin-top: 15px;
+  /*margin-right: auto;*/
   	margin: 0 auto;
+  /*padding: 15px;*/
+  margin: 5px auto;
 }
 .ghost-button {
   display: inline-block;
@@ -28,6 +33,9 @@ body {
   text-align: center;
   outline: none;
   text-decoration: none;
+  margin: 0 auto;
+
+
 }
 
 
@@ -115,13 +123,13 @@ body {
 
 .dropdown{
   position: relative;
-    top: -200px;
-    background-color: yellow;
+    top: 200;
+    background-color: pink;
     z-index: 1;
-    -webkit-transition: top 1s;
+    -webkit-transition: top 1s ;
     -moz-transition: top 1s;
     -o-transition: top 1s;
-    transition: top 1s;
+    transition: top 1s ;
   width: 150px;
   height: 200px;
 }
