--- a/popup.css
+++ b/popup.css
@@ -123,7 +123,7 @@ img#eyeGalaw-icon{
 
 .dropdown{
   position: relative;
-    top: 200;
+    /*top: 200;*/
     background-color: pink;
     z-index: 1;
     -webkit-transition: top 1s ;
@@ -132,4 +132,24 @@ img#eyeGalaw-icon{
     transition: top 1s ;
   width: 150px;
   height: 200px;
+}
+
+
+
+
+
+/*toggle*/
+#effect {
+    position: relative;
+    width: 150px;
+    height: 200px;
+    padding: 0.4em;
+  }
+
+
+/**/
+.switch-wrapper {
+  display: inline-block;
+  position: relative;
+  top: 3px;
 }
