--- a/popup.css
+++ b/popup.css
@@ -1,31 +1,88 @@
 
-
-
 body {
+  margin:0px !important;
   font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
   font-size: 100%;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
+  background:rgba(167, 239, 220,0.8);
+  
 }
+
+
+/*legit css making*/
+#curve-div{
+
+width:250px;
+height:170px;
+  -webkit-border-radius: 0px 0px 100px 100px;
+  border-radius: 0px 0px  100px 50%/40px;
+  background:rgba(107,214,185,0.8);
+}
+
+
+
 #main {
   width: 250px;
-  height: 350px;
-  background-color: #ffe9a8;
+  height: 00px;
+  border-radius: 5px;
+  /*background:rgba(167, 239, 220,0.8);*/
+  padding: 0px;
+  margin:0px !important;
 
 }
 img#eyeGalaw-icon{
-  /*right: 0;*/
-	 width: 50px;
-  	height: 50px;
-     display: block;
-  margin-top: 15px;
-  /*margin-right: auto;*/
-  	margin: 0 auto;
-  /*padding: 15px;*/
-  margin: 5px auto;
+	width: 50px;
+  height: 50px;
+  /*margin-top: 50px;*/
+  margin-bottom: 20px;
+  padding-top: 50px;
+  /*margin: 5px auto;*/
+  display: block;
 }
+
+.center{
+  display: block;
+  margin: 0 auto;
+}
+
+
+.myButton {
+  -moz-box-shadow:inset 0px 39px 0px -24px #e67a73;
+  -webkit-box-shadow:inset 0px 39px 0px -24px #e67a73;
+  box-shadow:inset 0px 39px 0px -24px #e67a73;
+  background-color:#e4685d;
+  -moz-border-radius:14px;
+  -webkit-border-radius:14px;
+  border-radius:14px;
+  border:1px solid #ffffff;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:6px 42px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #b23e35;
+  margin-left: 55px;
+  text-align: center;
+
+}
+.myButton:hover {
+  background-color:#eb675e;
+}
+.myButton:active {
+  position:relative;
+  top:1px;
+}
+
+
+
 .ghost-button {
-  display: inline-block;
+  display: block; /*center*/
+  margin: 0 auto; /*center*/
   width: 200px;
   padding: 8px;
   color: #fff;
@@ -33,80 +90,7 @@ img#eyeGalaw-icon{
   text-align: center;
   outline: none;
   text-decoration: none;
-  margin: 0 auto;
-
-
 }
-
-
-
-/*sliders*/
-/*body {margin:50px}*/
-#demo-frame > div.demo { padding: 10px !important; }
-
-.ui-slider .ui-slider-handle {width:2em;left:-.6em;text-decoration:none;text-align:center;}
-
-
-/*flat slider*/
-.flat-slider.ui-corner-all,
-.flat-slider .ui-corner-all {
-  border-radius: 0;
-}
-
-.flat-slider.ui-slider {
-  border: 0;
-  background: #f7d2cc;
-  border-radius: 7%;
-}
-
-.flat-slider.ui-slider-horizontal {
-  height: 4px;
-}
-
-.flat-slider.ui-slider-vertical {
-  height: 15em;
-  width: 4px;
-}
-
-.flat-slider .ui-slider-handle {
-  width: 20px;
-  height: 20px;
-  background: #38b11f;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-}
-
-.flat-slider.ui-slider-horizontal .ui-slider-handle {
-  top: 50%;
-  margin-top: -10px;
-}
-
-.flat-slider.ui-slider-vertical .ui-slider-handle {
-  left: 50%;
-  margin-left: -10px;
-}
-
-.flat-slider .ui-slider-handle:hover {
-  opacity: .8;
-}
-
-.flat-slider .ui-slider-range {
-  border: 0;
-  border-radius: 7;
-  background: #ff9999;
-}
-
-.flat-slider.ui-slider-horizontal .ui-slider-range {
-  top: 0;
-  height: 4px;
-}
-
-.flat-slider.ui-slider-vertical .ui-slider-range {
-  left: 0;
-  width: 4px;
-}
-
 
 
 
@@ -114,6 +98,8 @@ img#eyeGalaw-icon{
 
 .ghost-button .options {
     position: relative;
+     display: block; /*center*/
+  margin: 0 auto; /*center*/
     top: 0;
     /*background-color: lightblue;*/
     z-index: 10;
@@ -122,9 +108,9 @@ img#eyeGalaw-icon{
 
 
 .dropdown{
-  position: relative;
+  position: relative;  
     /*top: 200;*/
-    background-color: pink;
+    /*background-color: pink;*/
     z-index: 1;
     -webkit-transition: top 1s ;
     -moz-transition: top 1s;
@@ -133,10 +119,6 @@ img#eyeGalaw-icon{
   width: 150px;
   height: 200px;
 }
-
-
-
-
 
 /*toggle*/
 #effect {
@@ -153,3 +135,6 @@ img#eyeGalaw-icon{
   position: relative;
   top: 3px;
 }
+
+
+
