--- a/popup.css
+++ b/popup.css
@@ -7,14 +7,14 @@ body {
   width: 100%;
   height: 100%;
   background:rgba(167, 239, 220,0.8);
-  
+
 }
 
 
 /*legit css making*/
 #curve-div{
 
-width:250px;
+width:230px;
 height:170px;
   -webkit-border-radius: 0px 0px 100px 100px;
   border-radius: 0px 0px  100px 50%/40px;
@@ -24,8 +24,8 @@ height:170px;
 
 
 #main {
-  width: 250px;
-  height: 00px;
+  width: 230px;
+  height: 0px;
   border-radius: 5px;
   /*background:rgba(167, 239, 220,0.8);*/
   padding: 0px;
@@ -108,6 +108,7 @@ img#eyeGalaw-icon{
 
 
 .dropdown{
+  /*display: block;*/
   position: relative;  
     /*top: 200;*/
     /*background-color: pink;*/
@@ -134,6 +135,10 @@ img#eyeGalaw-icon{
   display: inline-block;
   position: relative;
   top: 3px;
+}
+
+#low-opacity{
+
 }
 
 
