--- a/popup.css
+++ b/popup.css
@@ -6,7 +6,8 @@ body {
   border-radius: 5px;
   width: 100%;
   height: 100%;
-  background:rgba(167, 239, 220,0.8);
+  /*background:rgba(167, 239, 220,0.8);*/
+  background: #ffffff;
 
 }
 
@@ -21,11 +22,13 @@ height:170px;
   background:rgba(107,214,185,0.8);
 }
 
-
+.padding{
+  padding-bottom: 100px;
+}
 
 #main {
   width: 230px;
-  height: 0px;
+  height: 400px;
   border-radius: 5px;
   /*background:rgba(167, 239, 220,0.8);*/
   padding: 0px;
@@ -85,7 +88,9 @@ img#eyeGalaw-icon{
   margin: 0 auto; /*center*/
   width: 200px;
   padding: 8px;
-  color: #fff;
+  /*color: #fff;*/
+    color: #868d99;
+
   border: 1px solid #fff;
   text-align: center;
   outline: none;
