--- a/popup.css
+++ b/popup.css
@@ -28,7 +28,7 @@ height:170px;
 
 #main {
   width: 230px;
-  height: 400px;
+  height: 0px;
   border-radius: 5px;
   /*background:rgba(167, 239, 220,0.8);*/
   padding: 0px;
@@ -110,7 +110,27 @@ img#eyeGalaw-icon{
     z-index: 10;
     cursor:pointer;
 }
+.flat-slider{
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-bottom: 10px;
 
+  
+}
+.dropdown span.label{
+
+  color: #616366;
+  font-size: 90%;  
+
+}
+.dropdown span.slider-value{
+  display: inline-block;
+  color: #616366;
+  font-size: 80%;  
+  float: right;
+  margin-top: -20px;
+}
+/*slider-value*/
 
 .dropdown{
   /*display: block;*/
