--- a/controls.css
+++ b/controls.css
@@ -1,65 +1,3 @@
-/*ADDED CSS*/
-/*ADDED CSS*/
-/*ADDED CSS*/
-/*ADDED CSS*/
-  /*----------------*/
- /*----Main Page---*/
-/*----------------*/
-.t_inject_container
-{
-    position:fixed;
-    bottom:0px;
-    left:0px;
-    z-index: 999;
-    background-color:grey;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box; 
-}
-
-.menu {
-    background-color:lightblue;
-    border-radius:5px;
-}
-.t_intect_button {
-    background-color:blue;
-    display:block;
-    height: 50px;
-    width: 50px;
-    margin: 5px;
-    font-size: 20px;
-    color: white;
-    border: 0px;
-    border-radius:7px;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box; 
-    border-radius:5px;
-}
-
-.minimize_button{
-    height: 20px;
-    width: 20px;
-    margin: 2px;
-    font-size: 12px;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box; 
-    border-radius:5px;
-}
-
- /*-----------------*/
- /*Timeline Element*/
-/*----------------*/
-.timeline_element {
-    background-color:red;
-    border-radius:5px;
-    
-}
-.t_text_area {
-    height: 50px;
-    width: 100px;
-}
 
 
 
@@ -149,4 +87,25 @@ z-index: 1000 !important;
 border-right: 50px solid black;
   border-top: 50px solid transparent; 
   border-bottom: 50px solid transparent;
+}
+
+
+#gaze_up{
+  top: 0;
+  left: 0;
+right: 0;
+}
+#gaze_down{
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+
+.gaze_pads{
+  /*width: 100px;*/
+  width: 100%;
+  height: 50px;
+  background-color:red;
+  position:fixed;
 }
