--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -42,15 +42,15 @@ border-left: 50px solid transparent;
 }*/
 
 #line_arrow_up{
-  top: 15;
+  top: 0;
   left: 0;
 right: 0;
 /*border-left: 50px solid transparent;
   border-right: 50px solid transparent;
   
   border-bottom: 50px solid black;*/
-   -webkit-transform: rotate(135deg);
-  transform: rotate(135deg);
+   /*-webkit-transform: rotate(135deg);
+  transform: rotate(135deg);*/
 }
 #prev_page{
   top: 15;
@@ -101,7 +101,7 @@ right: 0;
   width: 100px;
   height: 100px;
   margin: auto;
-
+/*background-color: re d;*/
 position:fixed;
 z-index: 1000 !important;
 
@@ -142,14 +142,14 @@ z-index: 1000000 !important;
 
 
 /**/
-  border: 1px solid #000;
+ /* border: 1px solid #000;
   border-width: 0 0 2px 2px;
   width: 50px;
   height: 50px;
   line-height: 0;
   font-size: 0;
   -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  transform: rotate(-45deg);*/
     
 }
 
@@ -217,6 +217,58 @@ right: 0;
 
 
 /*pop-up*/
+
+
+
+
+
+
+/*triangle oops*/
+
+.container {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    border-top: 4px solid #e74c3c;
+}
+
+.triangle {
+    position: fixed;
+    margin: auto;
+    /*top: 0;*/
+    left: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    border-right: 4px solid #e74c3c;
+    border-bottom: 4px solid #e74c3c;
+    
+}
+#triangle_down {
+    
+    top: 0;
+    /*left: 0;*/
+    /*right: 0;*/
+    
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+}
+#triangle_up {
+    
+   bottom: 0;
+ /* left: 0;
+  right: 0;*/
+    
+    transform: rotate(225deg);
+    -webkit-transform: rotate(225deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    
+}
 
 
 
