--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -107,7 +107,7 @@ right: 0;
 position:fixed;
 
 
-  font-size: 48px;
+  /*font-size: 48px;*/
 font-style: normal;
 /*font-weight: bold;*/
 text-decoration: none;
@@ -128,8 +128,8 @@ background-color: #ffffff;
 position:fixed;
 
 
-  font-size: 48px;
-font-style: normal;
+  /*font-size: 12px;*/
+/*font-style: normal;*/
 /*font-weight: bold;*/
 text-decoration: none;
 text-transform: none;
