--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -52,16 +52,16 @@ right: 0;
    /*-webkit-transform: rotate(135deg);
   transform: rotate(135deg);*/
 }
-#prev_page{
+/*#prev_page{
   top: 15;
   left: 0;
-/*border-left: 50px solid transparent;
+border-left: 50px solid transparent;
   border-right: 50px solid transparent;
   
-  border-bottom: 50px solid black;*/
+  border-bottom: 50px solid black;
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
-}
+}*/
 
 /*#arrow_up{
   bottom: 0;
@@ -227,8 +227,8 @@ right: 0;
     width: 100%; 
     height: 100%; 
   overflow: visible; 
-  background: rgba(51,51,51, 0.8) url('chrome-extension://ilgdhcbhjnidiblajhalcalmcacdbgef/src/img/loading.gif') no-repeat center center; 
-  /*background-size: 80% 80%;*/
+  background: rgba(51,51,51, 0.8) url('chrome-extension://ilgdhcbhjnidiblajhalcalmcacdbgef/src/img/load.gif') no-repeat center center; 
+  /*background-size: 100% 100%;*/
 
    /* z-index: 999; 
     border: 16px solid #f3f3f3; 
@@ -300,6 +300,33 @@ right: 0;
     -ms-transform: rotate(45deg);
     
 }
+#prev_page {
+    /*margin-bottom:20px;*/
+    
+   top: 50%;
+  left: 10;
+  /*margin-left: 10px;*/
+    
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg); 
+     -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg); 
+    
+}
 
-
+#frwd_page{
+    /*margin-bottom:20px;*/
+    
+   top: 50%;
+  right: 0;
+  margin-right: 10px;
+    
+    transform: rotate(315deg);
+    -webkit-transform: rotate(315deg); 
+     -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg); 
+    
+}
 
