--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -6,6 +6,35 @@ body{
   /*background-size: cover;*/
 }
 
+/*cose buttn*/
+.close {
+  position: absolute;
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+    z-index: 100;
+
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
+
 
 #popup1 {
   position: fixed;
@@ -34,13 +63,10 @@ body{
 
 .carousel {
     position: relative;
-   
-  /*width: 100%;*/
-  
-
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
     padding-top: 26px;
     z-index: 3;
+    margin: 10px;
 /*background-size: cover;*/
 }
 
@@ -74,7 +100,7 @@ z-index: 3px;
     position: absolute;
     opacity: 0;
    width: 100%;
-    height: 530px;
+    /*height: 530px;*/
 /*     background: blue; */
     -webkit-transition: opacity 0.6s ease-out;
     transition: opacity 0.6s ease-out;
@@ -172,8 +198,10 @@ z-index: 3px;
     z-index: 9999;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
 }
+
 #item1{
   background: #ffeac9;
+
   /*width: 100%;*/
   height: 100%;
     z-index: 3;
@@ -204,7 +232,8 @@ z-index: 3px;
 
 /* eye css */
 .surface {
-   margin: 0 auto;
+   /*margin: 0 auto ;*/
+   /*padding-top: 100px;*/
   margin-left: 40%;
   /*width: 70%;
   height: 70%;*/
@@ -459,13 +488,22 @@ a:hover {
   color: #90e0fb;
 }
 
+#first-eye{
+  /*top:300;*/
+
+  bottom: 0;
+}
+
 #second-eye{
+  top:0;
+  bottom: 0;
+
   margin-left: 48%;
 }
 
 
 /*  text*/
-.text{
+.texts{
   font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
   font-size: 100px;
     text-align: center;
@@ -475,3 +513,67 @@ a:hover {
 /* text-shadow: rgba(0,0,0,.2) 2px 6px 5px,rgba(255,255,255,.4) 0 -4px 30px; */
   text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
 }
+
+/*text ids*/
+#hithere h1{
+  /*margin-top: 100px;*/
+
+}
+#eyeGalawText{
+  /*margin-top: */
+}
+
+
+/*page3*/
+.texts-h4{
+  padding-top: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+   font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+  font-size: 50px;
+    text-align: center;
+
+  color: rgba(255, 255, 255, 255);
+  text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
+}
+.ul-list{
+  font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+  font-size: 36px;
+
+  color:rgb(214, 51, 108);
+
+text-shadow: #2e2e2e 0 1px 2px;
+
+}
+#list-remem{
+  margin: 0 auto;
+  width: 500px;
+    border:3px solid rgba(214, 51, 108, 0.2);
+  padding: 30px;
+  padding-bottom: 15px;
+  line-height: 200%;
+  margin-bottom: 30px;
+
+}
+
+#demovid{
+  position: relative;
+  width: 500px;
+  height: 500px;
+  margin-top: -200px;
+  margin-left: 200px;
+  z-index: 1000;
+  /*left: 50%;*/
+}
+
+
+/*#demovid{
+  position: relative;
+  width: 700px;
+  height: 700px;
+  margin: 0 auto;
+  margin-left: 200px;
+  z-index: 100;
+  /*left: 50%;
+}
+*/
