--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -36,10 +36,10 @@ height:170px;
 
 }
 img#eyeGalaw-icon{
-	width: 50px;
-  height: 50px;
+	width: 80px;
+  height: 80px;
   /*margin-top: 50px;*/
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding-top: 50px;
   /*margin: 5px auto;*/
   display: block;
@@ -69,8 +69,9 @@ img#eyeGalaw-icon{
   padding:6px 42px;
   text-decoration:none;
   text-shadow:0px 1px 0px #b23e35;
-  margin-left: 55px;
+  margin-left: 50px;
   text-align: center;
+  margin-top: 10px;
 
 }
 .myButton:hover {
@@ -110,6 +111,10 @@ img#eyeGalaw-icon{
     z-index: 10;
     cursor:pointer;
 }
+#options{
+    margin-top: 10px;
+
+}
 .flat-slider{
   margin-top: 10px;
   margin-right: 30px;
@@ -143,14 +148,14 @@ img#eyeGalaw-icon{
     -o-transition: top 1s;
     transition: top 1s ;
   width: 150px;
-  height: 200px;
+  height: 180px;
 }
 
 /*toggle*/
 #effect {
     position: relative;
     width: 150px;
-    height: 200px;
+    height: 180px;
     padding: 0.4em;
   }
 
