--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -10,7 +10,7 @@ body{
 .close {
   position: absolute;
   right: 32px;
-  top: 32px;
+  top: 37px;
   width: 32px;
   height: 32px;
   opacity: 0.3;
@@ -100,6 +100,7 @@ z-index: 3px;
     position: absolute;
     opacity: 0;
    width: 100%;
+
     /*height: 530px;*/
 /*     background: blue; */
     -webkit-transition: opacity 0.6s ease-out;
@@ -203,14 +204,17 @@ z-index: 3px;
   background: #ffeac9;
 
   /*width: 100%;*/
-  height: 100%;
+  /*height: 100%;*/
+    height: 540px;
+
     z-index: 3;
 
 }
 #item2{
   background: #ffeac9;
   /*width: 100%;*/
-  height: 100%;
+    height: 540px;
+  /*height: 100%;*/
     z-index: 3;
 
 
@@ -219,7 +223,8 @@ z-index: 3px;
 #item3{
   background: #ffeac9;
   /*width: 100%;*/
-  height: 100%;
+    height: 540px;
+  /*height: 100%;*/
     z-index: 3;
 
 
@@ -525,10 +530,10 @@ a:hover {
 
 
 /*page3*/
-.texts-h4{
-  padding-top: 20px;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+.texts-h3{
+  padding-top: 10px;
+  /*margin-bottom: 20px;*/
+  padding-bottom: 10px;
    font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
   font-size: 50px;
     text-align: center;
@@ -549,8 +554,8 @@ text-shadow: #2e2e2e 0 1px 2px;
   margin: 0 auto;
   width: 500px;
     border:3px solid rgba(214, 51, 108, 0.2);
-  padding: 30px;
-  padding-bottom: 15px;
+  padding: 15px;
+  /*padding-bottom: 15px;*/
   line-height: 200%;
   margin-bottom: 30px;
 
@@ -558,10 +563,10 @@ text-shadow: #2e2e2e 0 1px 2px;
 
 #demovid{
   position: relative;
-  width: 500px;
-  height: 500px;
-  margin-top: -200px;
-  margin-left: 200px;
+  width: 600px;
+  height: 400px;
+  margin-top: -50px;
+  margin-left: 30%;
   z-index: 1000;
   /*left: 50%;*/
 }
