[eyeGalaw -documented] Added docu to CSS

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,3 +1,7 @@
+
+/**
+ * css for modal
+ */
 body{
     font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
       /*position: relative;*/
