--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,4 +1,8 @@
 
+/**
+ * css for for extension oage's pop-up
+ */
+
 body {
   margin:0px !important;
   font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
