--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -1,3 +1,9 @@
+
+/**
+ * css for welcome page with demo video and reminders
+
+ */
+
 body{
     font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
      
